--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-  <link rel="stylesheet" href="assets/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
   <title>Tom Waits | Home</title>
 </head>
 
@@ -55,7 +55,7 @@
       </div>
     </div>
   </div>
-  <container>
+
   <div class="row no-gutters">
     <div class="col-sm-6">
       <div class="news">
@@ -94,22 +94,26 @@
         <p class="mb-0">"The big print giveth and the small print taketh away."</p><br>
         <p class="mb-0">"Champagne for my real friends and real pain for my sham friends."</p><br>
         <p class="mb-0">"I'd rather have a free bottle in front of me than a prefrontal lobotomy."</p><br>
-        <p class="mb-0">"Jimmy Stewart said he stopped making movies because he didn't like the way he looked on screen
+        <p class="mb-0">"Jimmy Stewart said he stopped making movies because he didn't like the way he looked on
+          screen
           anymore. I'm more the guy who says I look like hell but I'm going to see where it gets me."</p><br>
         <p class="mb-0">"Most of the people I admire, they usually smell funny and don't get out much. It's true. Most
           of them are either dead or not feeling well."</p><br>
         <p class="mb-0">"Writing songs is like capturing birds without killing them. Sometimes you end up with nothing
           but a mouthful of feathers."</p><br>
-        <p class="mb-0">"If you record the sound of bacon in a frying pan and play it back, it sounds like the pops and
-          cracks on an old 33 1/3 recording. Almost exactly like that. You could substitute it for that sound."</p><br>
+        <p class="mb-0">"If you record the sound of bacon in a frying pan and play it back, it sounds like the pops
+          and
+          cracks on an old 33 1/3 recording. Almost exactly like that. You could substitute it for that sound."</p>
+        <br>
         <p class="mb-0">"Don't you know there ain't no devil, it's just god when he's drunk."</p><br>
-        <p class="mb-0">“And the things you can’t remember tell the things you can’t forget that history puts a saint in every dream.”</p><br>
+        <p class="mb-0">“And the things you can’t remember tell the things you can’t forget that history puts a saint
+          in every dream.”</p><br>
         <p class="mb-0">“I've been riding on the crest of a slump lately.”</p><br>
         <p class="mb-0">“The piano has been drinking, not me.”</p><br>
       </blockquote>
     </div>
   </div>
-</container>
+
   <footer>
     <ul class="social-networks">
       <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook"> </i></a></li>
