--- a/tom_live.html
+++ b/tom_live.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-    <link rel="stylesheet" href="assets/styles.css">
-    <title>Tom Live</title>
-  </head>
-  
-  <body>
-    <header>
-      <div class="container-fluid">
-        <h2>Tom Waits Unofficial Fansite</h2><br>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <title>Tom Live</title>
+</head>
+
+<body>
+  <header>
+    <div class="container-fluid">
+      <h2>Tom Waits Unofficial Fansite</h2><br>
+    </div>
+  </header>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
 
     <!-- Toggler/collapsibe Button -->
@@ -45,59 +45,59 @@
   </nav>
   <!-- Youtube links-->
   <div class="container-fluid">
-      <h5>Downtown Train</h5><br>
-    </div>
+    <h5>Downtown Train</h5><br>
+  </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rLtZKkCIVmI" allowfullscreen></iframe>
   </div>
-  
+
   <div class="container-fluid">
-      <h5>16 Shells From a 30 'ought 6</h5><br>
-    </div>
-  
+    <h5>16 Shells From a 30 'ought 6</h5><br>
+  </div>
+
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/qwRkBTG17vk" allowfullscreen></iframe>
   </div>
   <div class="container-fluid">
-      <h5>Cold Cold Ground</h5><br>
-    </div>
+    <h5>Cold Cold Ground</h5><br>
+  </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jLyHHwDXw5Y" allowfullscreen></iframe>
   </div>
   <div class="container-fluid">
-      <h5>'Til The Money Runs Out</h5><br>
-    </div>
+    <h5>'Til The Money Runs Out</h5><br>
+  </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wOQplFQqOk4" allowfullscreen></iframe>
   </div>
   <div class="container-fluid">
-      <h5>Better Off Without A Wife</h5><br>
-    </div>
+    <h5>Better Off Without A Wife</h5><br>
+  </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/94h3JEC9db0" allowfullscreen></iframe>
   </div>
   <div class="container-fluid">
-      <h5>Chicago</h5><br>
-    </div>
+    <h5>Chicago</h5><br>
+  </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YVJ3iY7EceE" allowfullscreen></iframe>
   </div>
   <div class="container-fluid">
-      <h5>Tom is influenced by Bob Dylan</h5><br>
-    </div>
- 
+    <h5>Tom is influenced by Bob Dylan</h5><br>
+  </div>
+
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/MGxjIBEZvx0" allowfullscreen></iframe>
   </div>
   <div class="container-fluid">
-      <h5>Tom is influenced by Howlin' Wolf</h5><br>
-    </div>
+    <h5>Tom is influenced by Howlin' Wolf</h5><br>
+  </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/HTDjD_UdJYs" allowfullscreen></iframe>
   </div>
   <div class="container-fluid">
-      <h5>Tom is influenced by Theolonius Monk</h5><br>
-    </div>
+    <h5>Tom is influenced by Theolonius Monk</h5><br>
+  </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KshrtLXBdl8" allowfullscreen></iframe>
   </div>
