Add screenshots to documentation area

--- a/subscribe.html
+++ b/subscribe.html
@@ -49,7 +49,7 @@
           or one of his amazing facts!</p>
         <hr class="my-6">
         <p><strong><em>Just fill out your details and check your inbox every month</em></strong></p>
-        <img class="img-fluid" src="https://sfae.com/getattachment/730a1bfc-58df-4b33-82b4-dc39a4f938d4/600"
+        <img class="img-fluid" src="assets/images/sub hero.jpg"
           alt="Tom Waits">
       </div>
     </div>
